# URDF-door

./: CMakeLists.txt  README.md  package.xml
config/: door_control.yaml
launch/: door.launch  door_hard_obstacle.launch  door_soft_obstacle.launch  door_urdf.launch  door_wind.launch  reemc_door.launch  reemc_door_spring.launch  reemc_gazebo.launch  spawn_door.launch  spawn_urdf_door.launch
models/: lucrezio.urdf.xacro  test_door.urdf  test_door_10.urdf  test_door_2.urdf  test_door_2.urdf.xacro  test_door_3.urdf.xacro  test_door_4.urdf.xacro  test_door_5.urdf.xacro  test_door_6.urdf.xacro  test_door_6_backup.urdf.xacro  test_door_7.urdf.xacro  test_door_8.urdf.xacro  test_door_8_house.urdf.xacro  test_door_9.urdf.xacro
models/autoclose_door/: autoclose_door.sdf  model.config
models/autoclose_door_wind/: autoclose_door_wind.sdf  model.config
models/autoclose_door_wind/meshes/: door4.stl
models/box_obstacle/: model.config  model.sdf
models/box_obstacle/meshes/: model.dae
models/gearbox/: model.config
models/hard_obstacle/: model.config  model.sdf
models/hard_obstacle/meshes/: model.dae
models/house_1/: house_1.sdf  model.config
models/meshes/: door.stl  door2.stl  door3.stl  frame.stl  frame2.stl  frame3.stl  frame4.stl  lever.stl  lever2.stl  lever3.stl  wall3.stl  walls.stl
models/sdf_door/: test_door_1.sdf
models/test_door_1/: model.config  test_door_1.sdf
models/textures/: light_wood.material
play_motion/: README.md  open_door.yaml
worlds/: empty.world  hard_obstacle.world  house_sky.world  moving_obstacle.world  wind.world
(+3 files in other folders)
