<?xml version="1.0"?>
<package>
  <name>reemc_door</name>
  <version>0.0.1</version>
  <description>Simulation files for the REEM-C robot.</description>
  <maintainer email="josevicentejaramillo@gmail.com">Jose V. Jaramillo</maintainer>
  <license>Modified BSD</license>
  <author email="josevicentejaramillo@gmail.com">Jose V. Jaramillo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>reemc_controller_configuration_gazebo</run_depend>
  <run_depend>reemc_description</run_depend>
  <run_depend>reemc_hardware_gazebo</run_depend>
  <run_depend>reemc_bringup</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>pal_gazebo_plugins</run_depend>
  <run_depend>reemc_gazebo</run_depend>

</package>
